--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack",
     "watch": "webpack --watch",
     "start": "webpack serve --open",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "sass": "sass --watch src/input.scss src/style.css"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +26,7 @@
     "axios": "^1.7.7",
     "git": "^0.1.5",
     "materialize-css": "^1.0.0-rc.2",
+    "sass": "^1.79.5",
     "sweetalert2": "^11.14.3",
     "swiper": "^11.1.14"
   }
