--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@glidejs/glide": "^3.6.2",
+    "animate.css": "^4.1.1",
     "axios": "^1.7.7",
     "git": "^0.1.5",
     "materialize-css": "^1.0.0-rc.2",
